--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_about">Tietoja</string>
     <string name="menu_help">Apua</string>
     <string name="menu_select_all">Select all</string>
+    <string name="menu_sort">Sort</string>
     <string name="menu_all">Kaikki</string>
     <string name="menu_restriction_all">Vaihda rajoitukset</string>
     <string name="menu_clear_all">Clear all</string>
@@ -106,16 +107,11 @@
     <string name="title_fuser">Suodata käyttäjän applikaatioihin</string>
     <string name="title_fsystem">Suodata järjestelmän applikaatioihin</string>
     <string name="title_fnot">invertoi</string>
-    <string name="title_sort_by">Sort by</string>
-
-    <string-array name="title_smodes">
-        <item >name</item>
-        <item >uid</item>
-        <item >date installed</item>
-        <item >date updated</item>
-        <item >date modified</item>
-    </string-array>
-
+    <string name="title_sname">By name</string>
+    <string name="title_suid">By uid</string>
+    <string name="title_sinstalled">By date installed</string>
+    <string name="title_supdated">By date updated</string>
+    <string name="title_smodified">By date modified</string>
     <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">sarjanumero#</string>
     <string name="settings_lat">Latituudi</string>
