--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_about">Riguardo a</string>
     <string name="menu_help">Aiuto</string>
     <string name="menu_select_all">Select all</string>
+    <string name="menu_sort">Sort</string>
     <string name="menu_all">Tutto</string>
     <string name="menu_restriction_all">Imposta restrizioni</string>
     <string name="menu_clear_all">Deseleziona tutto</string>
@@ -107,16 +108,11 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
     <string name="title_fuser">Filtra per app utente</string>
     <string name="title_fsystem">Filtra per app di sistema</string>
     <string name="title_fnot">Nega</string>
-    <string name="title_sort_by">Sort by</string>
-
-    <string-array name="title_smodes">
-        <item >name</item>
-        <item >uid</item>
-        <item >date installed</item>
-        <item >date updated</item>
-        <item >date modified</item>
-    </string-array>
-
+    <string name="title_sname">By name</string>
+    <string name="title_suid">By uid</string>
+    <string name="title_sinstalled">By date installed</string>
+    <string name="title_supdated">By date updated</string>
+    <string name="title_smodified">By date modified</string>
     <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Numero di serie#</string>
     <string name="settings_lat">Latitudine</string>
