--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_about">Про програму</string>
     <string name="menu_help">Допомога</string>
     <string name="menu_select_all">Select all</string>
+    <string name="menu_sort">Sort</string>
     <string name="menu_all">Виділити все</string>
     <string name="menu_restriction_all">Переключити довзоли</string>
     <string name="menu_clear_all">Очистити всі</string>
@@ -108,16 +109,11 @@
     <string name="title_fuser">програми користувача</string>
     <string name="title_fsystem">системні програми</string>
     <string name="title_fnot">Переключити</string>
-    <string name="title_sort_by">Sort by</string>
-
-    <string-array name="title_smodes">
-        <item >name</item>
-        <item >uid</item>
-        <item >date installed</item>
-        <item >date updated</item>
-        <item >date modified</item>
-    </string-array>
-
+    <string name="title_sname">By name</string>
+    <string name="title_suid">By uid</string>
+    <string name="title_sinstalled">By date installed</string>
+    <string name="title_supdated">By date updated</string>
+    <string name="title_smodified">By date modified</string>
     <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Серійний номер</string>
     <string name="settings_lat">Широта</string>
