--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -112,7 +112,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_suid">By uid</string>
     <string name="title_sinstalled">By date installed</string>
     <string name="title_supdated">By date updated</string>
-    <string name="title_smodified">By date modified</string>
+    <string name="title_smodified">By date modified (XPrivacy)</string>
     <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
