--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -112,7 +112,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="title_suid">By uid</string>
     <string name="title_sinstalled">By date installed</string>
     <string name="title_supdated">By date updated</string>
-    <string name="title_smodified">By date modified</string>
+    <string name="title_smodified">By date modified (XPrivacy)</string>
     <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitud</string>
