--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -119,7 +119,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="title_suid">By uid</string>
     <string name="title_sinstalled">By date installed</string>
     <string name="title_supdated">By date updated</string>
-    <string name="title_smodified">By date modified</string>
+    <string name="title_smodified">By date modified (XPrivacy)</string>
     <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
