--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -22,7 +22,7 @@
     <string name="menu_about">Over</string>
     <string name="menu_help">Help</string>
     <string name="menu_select_all">Select all</string>
-    <string name="menu_sort">Sort</string>
+    <string name="menu_sort">Sorteer</string>
     <string name="menu_all">Alle</string>
     <string name="menu_restriction_all">Schakel beperkingen</string>
     <string name="menu_clear_all">Alles wissen</string>
@@ -108,12 +108,12 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_fuser">Filter op gebruikersapplicaties</string>
     <string name="title_fsystem">Filter op systeemapplicaties</string>
     <string name="title_fnot">Negatief</string>
-    <string name="title_sname">By name</string>
-    <string name="title_suid">By uid</string>
-    <string name="title_sinstalled">By date installed</string>
-    <string name="title_supdated">By date updated</string>
-    <string name="title_smodified">By date modified (XPrivacy)</string>
-    <string name="title_sinvert">Invert sort order</string>
+    <string name="title_sname">Op naam</string>
+    <string name="title_suid">Op uid</string>
+    <string name="title_sinstalled">Op datum geïnstalleerd</string>
+    <string name="title_supdated">Op datum bijgewerkt</string>
+    <string name="title_smodified">Op datum gewijzigd (XPrivacy)</string>
+    <string name="title_sinvert">Omgekeerde sorteervolgorde</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
