--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -110,7 +110,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="title_fnot">Inverser</string>
     <string name="title_sname">Par nom</string>
     <string name="title_suid">Par uid</string>
-    <string name="title_sinstalled">Par date d\'installion</string>
+    <string name="title_sinstalled">Par date d\'installation</string>
     <string name="title_supdated">Par date de mise à jour</string>
     <string name="title_smodified">Par date de modification (XPrivacy)</string>
     <string name="title_sinvert">Inverser l\'ordre</string>
