--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -109,12 +109,12 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_fuser">Vartotojo programos</string>
     <string name="title_fsystem">Sistemos programos</string>
     <string name="title_fnot">Neriboti</string>
-    <string name="title_sname">By name</string>
-    <string name="title_suid">By uid</string>
-    <string name="title_sinstalled">By date installed</string>
-    <string name="title_supdated">By date updated</string>
-    <string name="title_smodified">By date modified (XPrivacy)</string>
-    <string name="title_sinvert">Invert sort order</string>
+    <string name="title_sname">Pagal pavadinimą</string>
+    <string name="title_suid">Pagal uid</string>
+    <string name="title_sinstalled">Pagal įdiegimo datą</string>
+    <string name="title_supdated">Pagal atnaujinimo datą</string>
+    <string name="title_smodified">Pagal modifikavimo datą (XPrivacy)</string>
+    <string name="title_sinvert">Atvirkštinė rūšiavimo tvarka</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
