--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="msg_randomizing" formatted="false">Randomizing %s</string>
     <string name="msg_upgrading" formatted="false">Upgrading %s</string>
     <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
+    <string name="msg_ondemand" formatted="false" translatable="false">%s is trying to use a function in the category %s</string>
     <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
 however it is impossible to guarantee it will work flawlessly on each and every device and for each and every application.
 \n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
@@ -121,6 +122,8 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="title_supdated">By date updated</string>
     <string name="title_smodified">By date modified (XPrivacy)</string>
     <string name="title_sinvert">Invert sort order</string>
+    <string name="title_allow" translatable="false">Allow</string>
+    <string name="title_deny" translatable="false">Deny</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
@@ -142,6 +145,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="settings_general">General</string>
     <string name="settings_fake_data">Fake data</string>
     <string name="settings_notify">Update notifications</string>
+    <string name="settings_ondemand" translatable="false">Ask to restrict</string>
     <string name="settings_log">Debug log (requires restart)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="settings_dangerous">Restrict dangerous functions</string>
