--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -145,7 +145,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="settings_general">General</string>
     <string name="settings_fake_data">Fake data</string>
     <string name="settings_notify">Update notifications</string>
-    <string name="settings_ondemand" translatable="false">Ask to restrict</string>
+    <string name="settings_ondemand" translatable="false">Restricting on demand</string>
     <string name="settings_log">Debug log (requires restart)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="settings_dangerous">Restrict dangerous functions</string>
