--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -67,6 +67,7 @@
     <string name="msg_randomizing" formatted="false">Randomizing %s</string>
     <string name="msg_upgrading" formatted="false">Upgrading %s</string>
     <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
+    <string name="msg_ondemand" formatted="false">%1$s is trying to use a function in the %2$s category</string>
     <string name="msg_first"><b>Велика увага була приділена розробці та тестуванню XPrivacy, 
 але не можна гарантувати, що вона буде працювати бездоганно на всіх пристроях та зі всімома програмами.
 \n\nВикористовуйте виключно на свій страх та ризик.</b>\n\nДив. також ліцензію:</string>
@@ -115,6 +116,8 @@
     <string name="title_supdated">By date updated</string>
     <string name="title_smodified">By date modified (XPrivacy)</string>
     <string name="title_sinvert">Invert sort order</string>
+    <string name="title_allow">Allow</string>
+    <string name="title_deny">Deny</string>
     <string name="settings_serial">Серійний номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Довгота</string>
@@ -130,6 +133,7 @@
     <string name="settings_general">Загальне</string>
     <string name="settings_fake_data">Фальшиві дані</string>
     <string name="settings_notify">Оновити сповіщення</string>
+    <string name="settings_ondemand">Restrict on demand</string>
     <string name="settings_log">Отладочный лог (требует перезапуска)</string>
     <string name="settings_expert">Експертний режим</string>
     <string name="settings_dangerous">Заборона небезпечних функцій</string>
